security_groups/domain_controller_sg/domain_controller_sg.tf
resource "aws_security_group" "security_group" {
    description = "${var.description}"
    name        = "${var.name}"
    tags        = "${var.tags}"
    vpc_id      = "${var.vpc_id}"

    ingress {
        from_port   = -1
        to_port     = -1
        protocol    = "icmp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 445
        to_port     = 445
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 445
        to_port     = 445
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 138
        to_port     = 138
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 464
        to_port     = 464
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 464
        to_port     = 464
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 389
        to_port     = 389
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 389
        to_port     = 389
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 53
        to_port     = 53
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 53
        to_port     = 53
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 123
        to_port     = 123
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 3268
        to_port     = 3269
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 88
        to_port     = 88
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 88
        to_port     = 88
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 67
        to_port     = 67
        protocol    = "udp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 135
        to_port     = 135
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 636
        to_port     = 636
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 5722
        to_port     = 5722
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 1024
        to_port     = 65535
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    ingress {
        from_port   = 3389
        to_port     = 3389
        protocol    = "tcp"
        cidr_blocks = ["${var.cidr_blocks}"]
    }

    egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    }
}
